# shape-color-vision

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
Readme_and_Mermaid/: README.md  mermaid.md
configs/: default.yaml
src/shape_color_vision/: __init__.py  main.py  pipeline.py
src/shape_color_vision/detection/: colors.py  shapes.py
src/shape_color_vision/io/: logger_csv.py  viz.py
src/shape_color_vision/utils/: config.py
tests/: test_pipeline_outputs.py
